--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
 aiohttp==3.6.2
-airtable-python-wrapper==0.15.1
 disease.py==1.1.0
 pandas==1.1.3
+airtable-python-wrapper==0.15.1
+beautifulsoup4==4.9.3
+boto3==1.17.3
+botocore==1.20.3
+bs4==0.0.1
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+inflection==0.5.1
+jmespath==0.10.0
+langdetect==1.0.8
+newsapi-python==0.2.6
+Pillow==8.1.0
+praw==7.1.3
+prawcore==1.5.0
+profanityfilter==2.0.6
+python-dateutil==2.8.1
+requests==2.25.1
+s3transfer==0.3.4
+six==1.15.0
+soupsieve==2.1
+update-checker==0.18.0
+urllib3==1.26.3
+websocket-client==0.57.0
