--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,83 @@
 aiohttp==3.6.2
-disease.py==1.1.0
-pandas==1.1.3
 airtable-python-wrapper==0.15.1
+args==0.1.0
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==20.7.1
+Automat==20.2.0
 beautifulsoup4==4.9.3
+blis==0.4.1
 boto3==1.17.3
 botocore==1.20.3
 bs4==0.0.1
+catalogue==1.0.0
 certifi==2020.12.5
-chardet==4.0.0
+cffi==1.14.0
+chardet==3.0.4
+clint==0.5.1
+cloudpickle==1.3.0
+constantly==15.1.0
+cryptography==3.3.1
+cymem==2.0.3
+disease.py==1.2.0
+docker-py==1.10.3
+docker-pycreds==0.2.1
+docopt==0.6.2
+en-core-web-sm==2.3.1
+fastzbarlight==0.0.14
+future==0.18.2
+go-vncdriver==0.4.19
+gym==0.17.2
+hyperlink==19.0.0
 idna==2.10
+incremental==17.5.0
 inflection==0.5.1
 jmespath==0.10.0
+joblib==1.0.0
 langdetect==1.0.8
+multidict==4.7.6
+murmurhash==1.0.2
+mutagen==1.45.1
+ndg-httpsclient==0.5.1
 newsapi-python==0.2.6
+numpy==1.19.0
+pandas==1.1.3
 Pillow==8.1.0
+plac==1.1.3
 praw==7.1.3
 prawcore==1.5.0
+preshed==3.0.2
+profanity-check==1.0.3
 profanityfilter==2.0.6
+pyasn1==0.4.8
+pycparser==2.20
+pyglet==1.5.0
+PyHamcrest==2.0.2
+pyOpenSSL==20.0.1
 python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
 requests==2.25.1
 s3transfer==0.3.4
+scdl==1.6.12
+scikit-learn==0.24.1
+scipy==1.5.1
+shortuuid==1.0.1
 six==1.15.0
 soupsieve==2.1
+spacy==2.3.2
+srsly==1.0.2
+termcolor==1.1.0
+thinc==7.4.1
+threadpoolctl==2.1.0
+tqdm==4.50.2
+Twisted==20.3.0
+txaio==20.4.1
+ujson==3.0.0
+-e git+https://github.com/openai/universe.git@cc9ce6ec241821bfb0f3b85dd455bd36e4ee7a8c#egg=universe
 update-checker==0.18.0
 urllib3==1.26.3
+wasabi==0.8.0
 websocket-client==0.57.0
+yarl==1.6.0
+zope.interface==5.1.0
