--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ boto3==1.17.3
 botocore==1.20.3
 bs4==0.0.1
 catalogue==1.0.0
-certifi==2020.12.5
+certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
 clint==0.5.1
@@ -42,7 +42,7 @@ ndg-httpsclient==0.5.1
 newsapi-python==0.2.6
 numpy==1.19.0
 pandas==1.1.3
-Pillow==8.1.0
+Pillow==8.0.1
 plac==1.1.3
 praw==7.1.3
 prawcore==1.5.0
@@ -57,7 +57,7 @@ pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
-requests==2.25.1
+requests==2.24.0
 s3transfer==0.3.4
 scdl==1.6.12
 scikit-learn==0.24.1
@@ -70,13 +70,14 @@ srsly==1.0.2
 termcolor==1.1.0
 thinc==7.4.1
 threadpoolctl==2.1.0
+tinytag==1.4.0
 tqdm==4.50.2
 Twisted==20.3.0
 txaio==20.4.1
 ujson==3.0.0
 -e git+https://github.com/openai/universe.git@cc9ce6ec241821bfb0f3b85dd455bd36e4ee7a8c#egg=universe
 update-checker==0.18.0
-urllib3==1.26.3
+urllib3==1.25.11
 wasabi==0.8.0
 websocket-client==0.57.0
 yarl==1.6.0
