--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - pip install -r requirements.txt
-  - python -m spacy download en_core_web_sm
+  # - python -m spacy download en_core_web_sm
 
 # branches:
 #   only:
